# moark

./: AIRGAP_PYPI_SETUP.md  AIRGAP_PYPI_SETUP_HE.md  CHECKSUMS.txt  DEPLOYMENT_GUIDE.md  DISTRIBUTION_README.md  README.md  prepare-airgap-pypi.sh  test-mapping-dict.json
.github/workflows/: publish-to-pypi.yml
.hypothesis/constants/: 04ee30db8b66b5d6  4763dcab4bc0da50  4fbd177a055fae3a  591df39adebf90b6  5d2bd30d981ae6e7  7770a2a390e70143  94ed087f0c86cb6f  bfadc2a5e1f3d476  c2ae19630ddd5c2d  d198f5e956c8f863
.kiro/specs/airgap-gitlab-ingest/: design.md  requirements.md  tasks.md
.kiro/specs/gitlab-private-source-artifacts/: design.md  requirements.md  tasks.md
.kiro/specs/repo-mapping-and-ui/: design.md  (+2 more)
docs/: ARCHITECTURE.md  ARCHITECTURE_PRESENTATION_HE.md  WORKFLOW.md
moark-ingest/: DOCUMENTATION.md  README.md  USAGE_GUIDE.md  example-mapping-dict.json  pyproject.toml
moark-ingest-offline-bundle/: INSTALL.txt
moark-ingest-offline-bundle/moark-ingest/: DOCUMENTATION.md  pyproject.toml  requirements.txt
moark-ingest-offline-bundle/wheels/: boto3-1.42.22-py3-none-any.whl  textual-7.0.0-py3-none-any.whl
moark-ingest/src/moark_ingest/: bundle_scanner.py  config_manager.py  ingest.py  ingest_ui_v2.py  ingest_ui_wizard.py  s3_client.py  s3_settings.py
moark-pack/: DOCUMENTATION.md
moark-pack-offline-bundle/: INSTALL.txt
moark-pack-offline-bundle/moark-pack/: DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
moark-pack-offline-bundle/moark-pack/src/moark_pack/: gitlab_client.py  pack.py  pack_ui.py
~/.moark/: mapping_dict.json
(+8 files in other folders)
