[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moark-pack"
version = "0.1.0"
description = "Moses in the Ark - Pack tool for creating Git bundles in internet-connected networks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0",
    "gitpython>=3.1.0",
]

[project.scripts]
moark-pack = "moark_pack.pack:main"
moark-pack-ui = "moark_pack.pack_ui:main"

[project.optional-dependencies]
ui = [
    "textual>=0.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/moark_pack"]
